build-tests/tests/fail/tokio_without_net_missing_net.rs
use build_tests::tokio::net;

fn main() {}
